[project]
name = "gemini-markdown-converter"
version = "0.1.0"
description = "Convert Markdown copied from Gemini into correctly fenced code blocks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
